src/objects/FieloCMS__Layout__c.object
<CustomObject>
    <description>A Layout refers to the branding style given to Sites, by means of related Themes and Templates.</description>
    <fields>
        <fullName>FieloCMS__CSSClasses__c</fullName>
        <description>this classes will be added to the HTML node</description>
        <label>CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DesktopCSS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s style sheet resources for Desktop devices</description>
        <label>Desktop&apos;s CSS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DesktopJS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Desktop devices</description>
        <label>Desktop&apos;s Javacsript URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DesktopTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Define the default template of the Desktop devices that will be use in this layout</description>
        <label>Desktop&apos;s Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That template belongs to another site. You must create the template in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>FieloCMS__Page__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Template</value>
            </filterItems>
            <filterItems>
                <field>$Source.FieloCMS__Site__c</field>
                <operation>equals</operation>
                <valueField>FieloCMS__Page__c.FieloCMS__Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Layouts</relationshipLabel>
        <relationshipName>ProgramLayoutsTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DisableProductResources__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked the product styles sheets and javascript will not be used.</description>
        <inlineHelpText>If you check this option the product resources will not be used. Don&apos;t check this unless you understand what you are doing.</inlineHelpText>
        <label>Disable Product Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCMS__HomeNavigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is the home for this layout. It replaces the previous look up to Menu (Home__c)</description>
        <label>Home</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That navigation belongs to another program. You must create the navigation in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>$Source.FieloCMS__Site__c</field>
                <operation>equals</operation>
                <valueField>FieloCMS__Navigation__c.FieloCMS__Site__c</valueField>
            </filterItems>
            <filterItems>
                <field>FieloCMS__Navigation__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>List</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Navigation__c</referenceTo>
        <relationshipLabel>Layouts</relationshipLabel>
        <relationshipName>Program_Layouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__MobileCSS__c</fullName>
        <description>This field have a list of the url of implementer style sheet resources for Mobile devices</description>
        <label>Mobile&apos;s CSS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__MobileJS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Mobile devices</description>
        <label>Mobile&apos;s JS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__MobileTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Define the default template of the Mobile devices that will be use in this layout</description>
        <label>Mobile&apos;s Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloCMS__Page__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Template</value>
            </filterItems>
            <filterItems>
                <field>FieloCMS__Page__c.FieloCMS__Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.FieloCMS__Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Layouts (Mobile&apos;s Template)</relationshipLabel>
        <relationshipName>LayoutsMobile</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__SEOTitle__c</fullName>
        <label>SEO Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>FieloCMS__Site__c</referenceTo>
        <relationshipLabel>Layouts</relationshipLabel>
        <relationshipName>ProgramPortals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__TabletCSS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s style sheet resources for Tablet devices</description>
        <label>Tablet&apos;s CSS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__TabletJS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Tablet devices</description>
        <label>Tablet&apos;s Javacsript URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__TabletTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Define the default template of the Tablet devices that will be use in this layout</description>
        <label>Tablet&apos;s Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That template belongs to another site. You must create the template in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>FieloCMS__Page__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Template</value>
            </filterItems>
            <filterItems>
                <field>$Source.FieloCMS__Site__c</field>
                <operation>equals</operation>
                <valueField>FieloCMS__Page__c.FieloCMS__Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Layouts (Tablet&apos;s Template)</relationshipLabel>
        <relationshipName>Layouts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Theme__c</fullName>
        <defaultValue>&apos;FieloCms_Themes_Default&apos;</defaultValue>
        <description>Name of the Static Resource that have the branding style sheet.</description>
        <label>Theme</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Layout</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>